--- a/.github/workflows/generate-icons.yml
+++ b/.github/workflows/generate-icons.yml
@@ -34,4 +34,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: "chore: generate icons.ts from ikons.md"
-          file_pattern: "app/icons.ts"
+          file_pattern: "app/UI/icons.ts"
