--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.6.0",
+    "@types/node": "^20.14.0",
     "@types/react": "^18.2.0",
-    "@types/node": "^20.14.0"
+    "@types/react-dom": "^18.2.0",
+    "typescript": "^5.6.0"
   }
 }
