feat: Dokončení profesionalizace - metadata, skeleton loadery, toast notifikace, validace env
Střední priorita:
- Vylepšena metadata (SEO, Open Graph, Twitter Cards)
- Rozšířen next.config.mjs (bezpečnostní hlavičky, optimalizace)
- Doplněn package.json (description, author, repository, keywords)
- Přidány skeleton loadery (nahrazeny textové loading stavy)
- Přidán toast notification systém (nahrazeny všechny alert() volání)
- Přidána validace env proměnných (type-safe přístup)

Všechny změny:
- Skeleton loadery pro lepší UX při načítání
- Toast notifikace místo alert() pro profesionální feedback
- Metadata pro lepší SEO a sdílení
- Bezpečnostní hlavičky v next.config
- Validace env proměnných při startu aplikace

--- a/package.json
+++ b/package.json
@@ -1,7 +1,24 @@
 {
   "name": "aplikace-v6",
   "version": "1.0.0",
+  "description": "Profesionální aplikace pro správu nemovitostí, jednotek, nájemníků, smluv, plateb a dokumentů",
+  "author": "Patrik Cechlovsky",
+  "license": "UNLICENSED",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/PatrikCechlovsky/aplikace-v6.git"
+  },
+  "keywords": [
+    "pronajímatel",
+    "správa nemovitostí",
+    "nájem",
+    "smlouvy",
+    "platby",
+    "nextjs",
+    "supabase",
+    "typescript"
+  ],
   "scripts": {
     "dev": "next dev",
     "build": "next build",
