Přidat npm skript pro automatický deploy

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript"
   ],
   "scripts": {
+    "auto-deploy": "./scripts/auto-commit-push.sh",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
