feat: Přidán Google Places API klíč pro živá data adres

--- a/.env.local
+++ b/.env.local
@@ -4,7 +4,7 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 # Address Autocomplete API Keys
 # Získejte klíč na: https://console.cloud.google.com/ (aktivujte Places API)
 # Pokud není k dispozici, použijí se mock data pro development
-GOOGLE_PLACES_API_KEY=
+GOOGLE_PLACES_API_KEY=AIzaSyDq1H4Lp-Ac50NgaEcFKMZbJAwaKlLqqQM
 
 # Alternativní API pro české adresy (RÚIAN)
 # Získejte klíč na: https://www.visidoo.cz/
